shopops/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-api
spec:
  selector:
    app: product-api

  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30080

  type: NodePort
